public interface ICalculator {
	public double getResult();
}
