public class Result {
    public static void outToConsole(Object result) {
        System.out.println(result);
    }
}
